[package]
name = "pest_idl_v4_grammar"
description = "OMG IDL v4.0 grammar for pest"
version = "0.2.0"
authors = ["Kevin Pansky <kevin.pansky@gmail.com>"]
repository = "https://github.com/kpansky/pest_idl_v4_grammar"
documentation = "https://docs.rs/pest_idl_v4_grammar"
keywords = ["omg", "idl", "grammar", "parser"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
pest = "^1.0"
pest_derive = "^1.0"

